[project]
name = "gryt"
version = "0.1.0"
description = "gryt: Minimal MVP Python CI framework primitives (Data, Step, Runner, Pipeline, Runtime, Versioning)"
requires-python = ">=3.8"
dependencies = [
    "docker>=7.1.0",
    "setuptools>=61.0",
    "typer>=0.12",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}  # Fix this to point to your actual VERSION file
dependencies = {file = "requirements.txt"}  # Keep if using; otherwise remove if sticking with static deps list

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gryt*"]

[project.scripts]
gryt = "gryt.cli:main"
