[project]
name = "gryt"
dynamic = ["version"]
description = "gryt: Minimal MVP Python CI framework primitives (Data, Step, Runner, Pipeline, Runtime, Versioning)"
requires-python = ">=3.8"
dependencies = [
    "docker>=7.1.0",
    "setuptools>=61.0",
    "typer>=0.12",
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-env>=1.0.0",
    "requests-mock>=1.11.0",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}  # Fix this to point to your actual VERSION file
dependencies = {file = "requirements.txt"}  # Keep if using; otherwise remove if sticking with static deps list

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gryt*"]

[project.scripts]
gryt = "gryt.cli:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
env = [
    "FLY_API_KEY = dummy_key_for_unit_tests",
    "TEST_MODE = unit"
]
